# AbyssForge

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
abyssforge/: __init__.py  cli.py  main.py
abyssforge/core/: engine.py  exceptions.py  parser.py  request.py
abyssforge/db/: storage.py
abyssforge/modules/: base.py
abyssforge/modules/api_security/: detector.py
abyssforge/modules/cmd_injection/: detector.py
abyssforge/modules/csrf/: detector.py
abyssforge/modules/lfi/: detector.py
abyssforge/modules/misconfig/: detector.py
abyssforge/modules/sqli/: detector.py
abyssforge/modules/xss/: detector.py
abyssforge/reporters/: html_reporter.py  json_reporter.py
abyssforge/utils/: helpers.py  logger.py  network.py  validators.py
config/: default_config.yaml
config/payloads/: command_injection.txt  lfi_payloads.txt  sqli_payloads.txt  xss_payloads.txt
core/: __init__.py  config.py  crawler.py  engine.py  finding.py  http_client.py
dashboard/: __init__.py  app.py
dashboard/templates/: error.html  index.html  scan_detail.html
data/payloads/: sqli_error.txt  sqli_time.txt  xss.txt
data/wordlists/: sensitive_paths.txt
database/: __init__.py  db.py
docs/: installation.md  usage.md
examples/: basic_scan.py
modules/: __init__.py
modules/broken_auth/: __init__.py  auth_check.py
modules/exposure/: __init__.py  sensitive_files.py
modules/injection/: __init__.py  sqli.py  ssti.py  xss.py  xxe.py
modules/misconfig/: __init__.py  headers.py
modules/network/: __init__.py  csrf.py  open_redirect.py  ssrf.py
reporting/: __init__.py  reporter.py
tests/: __init__.py  conftest.py  test_abyssforge.py
tests/test_core/: test_parser_finding.py
tests/test_modules/: test_modules.py
tests/test_utils/: test_helpers_validators.py
utils/: __init__.py  logger.py  payload_loader.py  url_utils.py
