[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "abyssforge"
version = "1.0.0"
description = "A powerful web vulnerability scanner for security researchers and bug bounty hunters"
authors = [
    {name = "faza-kamal", email = "faza-kamal@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["security", "pentesting", "vulnerability-scanner", "bug-bounty", "web-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    "dnspython>=2.4.0",
    "urllib3>=2.0.0",
    "certifi>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "responses>=0.23.0",
    "aioresponses>=0.7.0",
]

[project.scripts]
abyssforge = "abyssforge.main:main"

[project.urls]
Homepage = "https://github.com/faza-kamal/AbyssForge"
Repository = "https://github.com/faza-kamal/AbyssForge.git"
Issues = "https://github.com/faza-kamal/AbyssForge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["abyssforge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=abyssforge --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
